@@ -1,6 +1,6 @@
 [package]
 name = "zebra-ctl"
-version = "0.6.6"
+version = "0.6.7"
 edition = "2024"
 
 [dependencies]
