@@ -1,6 +1,6 @@
 [package]
 name = "zebra-rs"
-version = "0.6.6"
+version = "0.6.7"
 edition = "2021"
 
 [lints.rust]
