@@ -1,3 +1,8 @@
+2025-06-01  Kunihiro Ishiguro  <kunihiro@zebra.dev>
+
+	* zebra-rs/src/rib/link.rs (link_config_exec): IPv4 address
+	configuration.
+
 2025-05-31  Kunihiro Ishiguro  <kunihiro@zebra.dev>
 
 	* version: 0.6.6
